[package]
name = "offset-allocator"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
description = "A port of Sebastian Aaltonen's `OffsetAllocator` to Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/pcwalton/offset-allocator/"
keywords = ["memory-management"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
nonmax = "0.5"
